[project]
name = "defuddle-cli"
version = "0.1.0"
description = "Extract readable content from HTML pages"
requires-python = ">=3.10"

[tool.setuptools]
py-modules = ["defuddle"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
defuddle = "defuddle:main"
